[project]
name = "health"
version = "1.0.0"
description = "To collect various health API around the US"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires API key)",
]
pythonpath = ["src"]
