[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "health"
version = "1.0.0"
description = "To collect various health API around the US"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.104.0",
    "beautifulsoup4==4.14.3",
    "curl-cffi==0.15.0",
    "lxml==6.1.1",
    "matplotlib==3.10.9",
    "pandas==3.0.3",
    "playwright==1.60.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wonder = "wonder.main:main"
cdc-open = "cdc_open.main:main"
nssp = "nssp.main:main"
wisqars = "wisqars.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires API key)",
]
pythonpath = ["src"]
